opam-version: "1.2"
name: "safepass"
maintainer: "Dario Teixeira <dario.teixeira@nleyten.com>"
authors: ["Dario Teixeira <dario.teixeira@nleyten.com>"]
homepage: "http://ocaml-safepass.forge.ocamlcore.org/"
bug-reports: "https://github.com/darioteixeira/ocaml-safepass/issues"
dev-repo: "https://github.com/darioteixeira/ocaml-safepass.git"
license: "LGPL-2.1 with OCaml linking exception"
available: [ocaml-version >= "4.02.0"]
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build}
]
